wip: forgot that

--- a/notebooks/projet_equipe_R.ipynb
+++ b/notebooks/projet_equipe_R.ipynb
@@ -30,11 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 373,
    "metadata": {},
    "outputs": [],
    "source": [
-    "using CSV, DataFrames, Statistics, Dates, Gadfly, Combinatorics, Plots, StatsBase, StatsPlots, Random, StatsModels, GLM\n"
+    "using CSV, DataFrames, Statistics, Dates, Gadfly, Combinatorics, Plots, StatsBase, StatsPlots, Random, StatsModels, GLM, LinearAlgebra\n"
    ]
   },
   {
@@ -53330,7 +53330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 364,
    "metadata": {},
    "outputs": [
     {
@@ -53384,46 +53384,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 365,
    "metadata": {},
    "outputs": [
     {
-     "ename": "MethodError",
-     "evalue": "MethodError: no method matching similar(::Float64, ::Type{Any})\n\nClosest candidates are:\n  similar(!Matched::VSCodeServer.JuliaInterpreter.Compiled, ::Any)\n   @ VSCodeServer c:\\Users\\mcola\\.vscode\\extensions\\julialang.language-julia-1.127.2\\scripts\\packages\\JuliaInterpreter\\src\\types.jl:7\n  similar(!Matched::Type{A}, ::Type{T}, !Matched::StaticArraysCore.Size{S}) where {A<:Array, T, S}\n   @ StaticArrays C:\\Users\\mcola\\.julia\\packages\\StaticArrays\\MSJcA\\src\\abstractarray.jl:136\n  similar(!Matched::Type{SA}, ::Type{T}, !Matched::StaticArraysCore.Size{S}) where {SA<:StaticArraysCore.SizedArray, T, S}\n   @ StaticArrays C:\\Users\\mcola\\.julia\\packages\\StaticArrays\\MSJcA\\src\\abstractarray.jl:135\n  ...\n",
-     "output_type": "error",
-     "traceback": [
-      "MethodError: no method matching similar(::Float64, ::Type{Any})\n",
-      "\n",
-      "Closest candidates are:\n",
-      "  similar(!Matched::VSCodeServer.JuliaInterpreter.Compiled, ::Any)\n",
-      "   @ VSCodeServer c:\\Users\\mcola\\.vscode\\extensions\\julialang.language-julia-1.127.2\\scripts\\packages\\JuliaInterpreter\\src\\types.jl:7\n",
-      "  similar(!Matched::Type{A}, ::Type{T}, !Matched::StaticArraysCore.Size{S}) where {A<:Array, T, S}\n",
-      "   @ StaticArrays C:\\Users\\mcola\\.julia\\packages\\StaticArrays\\MSJcA\\src\\abstractarray.jl:136\n",
-      "  similar(!Matched::Type{SA}, ::Type{T}, !Matched::StaticArraysCore.Size{S}) where {SA<:StaticArraysCore.SizedArray, T, S}\n",
-      "   @ StaticArrays C:\\Users\\mcola\\.julia\\packages\\StaticArrays\\MSJcA\\src\\abstractarray.jl:135\n",
-      "  ...\n",
-      "\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] _similar_or_copy(x::Float64, ::Type{Any})\n",
-      "   @ Base .\\set.jl:572\n",
-      " [2] replace(A::Float64, old_new::Pair{String, String}; count::Nothing)\n",
-      "   @ Base .\\set.jl:690\n",
-      " [3] replace(A::Float64, old_new::Pair{String, String})\n",
-      "   @ Base .\\set.jl:686\n",
-      " [4] _broadcast_getindex_evalf\n",
-      "   @ .\\broadcast.jl:709 [inlined]\n",
-      " [5] _broadcast_getindex\n",
-      "   @ .\\broadcast.jl:682 [inlined]\n",
-      " [6] getindex\n",
-      "   @ .\\broadcast.jl:636 [inlined]\n",
-      " [7] copy\n",
-      "   @ .\\broadcast.jl:942 [inlined]\n",
-      " [8] materialize(bc::Base.Broadcast.Broadcasted{Base.Broadcast.DefaultArrayStyle{1}, Nothing, typeof(replace), Tuple{Vector{Float64}, Base.RefValue{Pair{String, String}}}})\n",
-      "   @ Base.Broadcast .\\broadcast.jl:903\n",
-      " [9] top-level scope\n",
-      "   @ c:\\Users\\mcola\\Documents\\1-School\\1-Session-Automne-2024\\MTH3302\\Prediction-consommation-carburant\\notebooks\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_Y130sZmlsZQ==.jl:2"
-     ]
+     "data": {
+      "text/plain": [
+       "79-element Vector{Float64}:\n",
+       " 12.3794736842105\n",
+       "  9.80041666666667\n",
+       " 10.6913636363636\n",
+       "  9.4084\n",
+       " 14.700625\n",
+       "  7.58741935483871\n",
+       "  8.71148148148148\n",
+       " 13.8358823529412\n",
+       " 12.3794736842105\n",
+       " 12.3794736842105\n",
+       "  ⋮\n",
+       "  8.71148148148148\n",
+       "  7.58741935483871\n",
+       " 10.2265217391304\n",
+       " 15.6806666666667\n",
+       " 11.7605\n",
+       " 12.3794736842105\n",
+       " 13.0672222222222\n",
+       " 10.2265217391304\n",
+       " 11.2004761904762"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -53442,7 +53433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 366,
    "metadata": {},
    "outputs": [
     {
@@ -53522,34 +53513,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 367,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ArgumentError",
-     "evalue": "ArgumentError: It is only allowed to pass a vector as a column of a DataFrame. Instead use `df[!, col_ind] .= v` if you want to use broadcasting.",
-     "output_type": "error",
-     "traceback": [
-      "ArgumentError: It is only allowed to pass a vector as a column of a DataFrame. Instead use `df[!, col_ind] .= v` if you want to use broadcasting.\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] setproperty!(::DataFrame, col_ind::Symbol, v::Float64)\n",
-      "   @ DataFrames C:\\Users\\mcola\\.julia\\packages\\DataFrames\\58MUJ\\src\\dataframe\\dataframe.jl:685\n",
-      " [2] top-level scope\n",
-      "   @ c:\\Users\\mcola\\Documents\\1-School\\1-Session-Automne-2024\\MTH3302\\Prediction-consommation-carburant\\notebooks\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_Y131sZmlsZQ==.jl:2"
-     ]
+     "data": {
+      "text/plain": [
+       "317-element Vector{Float64}:\n",
+       " 13.8358823529412\n",
+       "  9.80041666666667\n",
+       " 11.7605\n",
+       " 13.0672222222222\n",
+       " 13.8358823529412\n",
+       " 13.8358823529412\n",
+       "  7.3503125\n",
+       "  7.58741935483871\n",
+       " 11.2004761904762\n",
+       " 11.7605\n",
+       "  ⋮\n",
+       " 12.3794736842105\n",
+       "  9.80041666666667\n",
+       "  7.84033333333333\n",
+       "  8.71148148148148\n",
+       " 10.2265217391304\n",
+       " 12.3794736842105\n",
+       " 11.2004761904762\n",
+       "  7.84033333333333\n",
+       "  9.04653846153846"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "# Ajouter une colonne de biais pour l'interception\n",
-    "X.bias = 1.0\n",
+    "X = hcat(ones(size(X, 1)), X)\n",
     "\n",
-    "# Convertir X et y en matrices\n",
+    "# Convertir en matrices\n",
     "X = Matrix(X)\n",
-    "y = Matrix(y)\n",
+    "y = Vector(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 368,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "63-element Vector{Float64}:\n",
+       "  8.11068965517241\n",
+       "  9.04653846153846\n",
+       " 13.8358823529412\n",
+       " 11.2004761904762\n",
+       " 10.6913636363636\n",
+       " 11.7605\n",
+       "  7.84033333333333\n",
+       "  9.4084\n",
+       "  8.11068965517241\n",
+       "  8.71148148148148\n",
+       "  ⋮\n",
+       " 10.6913636363636\n",
+       "  8.71148148148148\n",
+       "  9.80041666666667\n",
+       " 11.7605\n",
+       "  8.40035714285714\n",
+       " 10.6913636363636\n",
+       " 13.0672222222222\n",
+       "  7.58741935483871\n",
+       " 12.3794736842105"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "using Random\n",
+    "\n",
+    "# Indices aléatoires\n",
+    "n = size(X, 1)\n",
+    "indices = randperm(n)\n",
+    "\n",
+    "# Taille de l'ensemble d'entraînement\n",
+    "n_train = Int(round(0.8 * n))\n",
+    "\n",
+    "# Diviser les indices\n",
+    "train_indices = indices[1:n_train]\n",
+    "valid_indices = indices[n_train+1:end]\n",
+    "\n",
+    "# Créer les ensembles\n",
+    "X_train = X[train_indices, :]\n",
+    "y_train = y[train_indices]\n",
+    "\n",
+    "X_valid = X[valid_indices, :]\n",
+    "y_valid = y[valid_indices]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4×4 Matrix{Float64}:\n",
+       "    254.0  512822.0        1341.0         728.2\n",
+       " 512822.0       1.03538e9     2.70717e6     1.47002e6\n",
+       "   1341.0       2.70717e6  7899.0        4352.3\n",
+       "    728.2       1.47002e6  4352.3        2440.24"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "lambda = 1.0\n",
     "\n",
     "# Calculer les paramètres\n",
-    "w = inv(X'X)X'y\n"
+    "XtX = X_train'X_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4×4 Matrix{Float64}:\n",
+       "    255.0  512822.0        1341.0         728.2\n",
+       " 512822.0       1.03538e9     2.70717e6     1.47002e6\n",
+       "   1341.0       2.70717e6  7900.0        4352.3\n",
+       "    728.2       1.47002e6  4352.3        2441.24"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Ajout de λI\n",
+    "n_features = size(X_train, 2)\n",
+    "lambda_I = lambda * I(n_features)\n",
+    "XtX_lambdaI = XtX + lambda_I"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 375,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4-element Vector{Float64}:\n",
+       " 0.01321491939284774\n",
+       " 0.002452922833690765\n",
+       " 0.6634289977583928\n",
+       " 0.6414294664599288"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Calcul de X^T y\n",
+    "Xty = X_train' * y_train\n",
+    "\n",
+    "# Résolution pour β\n",
+    "beta = XtX_lambdaI \\ Xty  # Résout le système linéaire"
    ]
   },
   {
@@ -53561,14 +53700,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 371,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Moyenne RMSLE : 1.0544164621361003\n"
+      "Moyenne RMSLE : 1.0577142578797392\n"
      ]
     }
    ],
