chore: one hot and bayesian

--- a/notebooks/projet_equipe_R.ipynb
+++ b/notebooks/projet_equipe_R.ipynb
@@ -195,6 +195,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 378,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "one_hot_encode (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "function one_hot_encode(df, cols)\n",
+    "    for col in cols\n",
+    "        levels = levels(df[!, col])\n",
+    "        for level in levels\n",
+    "            new_col = Symbol(string(col) * \"_\" * string(level))\n",
+    "            df[!, new_col] = ifelse.(df[!, col] .== level, 1.0, 0.0)\n",
+    "        end\n",
+    "        # Supprimer la colonne catégorique originale\n",
+    "        select!(df, Not(col))\n",
+    "    end\n",
+    "    return df\n",
+    "end"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -53632,7 +53662,7 @@
     }
    ],
    "source": [
-    "lambda = 1.0\n",
+    "lambda = 1.0 #Trouver le meilleur\n",
     "\n",
     "# Calculer les paramètres\n",
     "XtX = X_train'X_train"
@@ -53689,6 +53719,66 @@
     "\n",
     "# Résolution pour β\n",
     "beta = XtX_lambdaI \\ Xty  # Résout le système linéaire"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 376,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "63-element Vector{Float64}:\n",
+       "  8.265717423775383\n",
+       "  8.25099988677324\n",
+       " 10.904715877806812\n",
+       "  9.580310805123716\n",
+       "  9.595028342125861\n",
+       "  9.580310805123716\n",
+       "  7.609647194518063\n",
+       "  8.270623269442765\n",
+       "  8.273076192276456\n",
+       "  8.268170346609075\n",
+       "  ⋮\n",
+       "  9.582763727957406\n",
+       "  8.268170346609075\n",
+       "  9.599934187793242\n",
+       "  8.270623269442765\n",
+       "  8.265717423775383\n",
+       "  8.265717423775383\n",
+       " 10.904715877806812\n",
+       "  7.60228842601699\n",
+       " 10.926792183310027"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Ajouter la colonne de biais\n",
+    "X_valid = hcat(X_valid[:, 1:end-1], ones(size(X_valid, 1)))\n",
+    "\n",
+    "y_pred = X_valid * beta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 377,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE sur l'ensemble de validation : 1.6821580989224176\n"
+     ]
+    }
+   ],
+   "source": [
+    "rmse = sqrt(mean((y_pred - y_valid).^2))\n",
+    "println(\"RMSE sur l'ensemble de validation : \", rmse)"
    ]
   },
   {
