potential good result

--- a/notebooks/projet_equipe_R.ipynb
+++ b/notebooks/projet_equipe_R.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -935,20 +935,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
-     "ename": "UndefVarError",
-     "evalue": "UndefVarError: `y_train_split` not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: `y_train_split` not defined\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] top-level scope\n",
-      "   @ c:\\Users\\mcola\\Documents\\1-School\\1-Session-Automne-2024\\MTH3302\\Prediction-consommation-carburant\\notebooks\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_Y106sZmlsZQ==.jl:2"
-     ]
+     "data": {
+      "text/plain": [
+       "22"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -966,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -995,13 +992,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.690019472894159e63"
+       "0.8315193188897766"
       ]
      },
      "metadata": {},
@@ -1012,11 +1009,11 @@
     "# Entraînement final\n",
     "XtX_full = X_train' * X_train\n",
     "Xty_full = X_train' * y_train\n",
-    "beta_final = (XtX_full + best_lambda * I_reg) \\ Xty_full\n",
+    "beta_pred = (XtX_full + best_lambda * I_reg) \\ Xty_full\n",
     "\n",
     "# Prédictions sur le test\n",
-    "y_valid_pred = X_valid * beta_final\n",
-    "rmse = sqrt(mean((y_pred - y_valid).^2))"
+    "y_valid_pred = X_valid * beta_pred\n",
+    "rmse = sqrt(mean((y_valid_pred - y_valid).^2))"
    ]
   },
   {
@@ -1028,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
