add one encoding to pca

--- a/notebooks/projet_equipe_R.ipynb
+++ b/notebooks/projet_equipe_R.ipynb
@@ -61,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using CSV, DataFrames, Statistics, Dates, Gadfly, Combinatorics, Plots, StatsBase, StatsPlots, Random, StatsModels, GLM, LinearAlgebra"
+    "using CSV, DataFrames, Statistics, Dates, Gadfly, Combinatorics, Plots, StatsBase, StatsPlots, Random, StatsModels, GLM, LinearAlgebra, MultivariateStats"
    ]
   },
   {
@@ -5177,6 +5177,21 @@
     "    valid[!, col] = safe_parse_float.(valid[!, col])\n",
     "end\n",
     "\n",
+    "\n",
+    "# # Define categorical columns\n",
+    "# categorical_cols = [:type, :transmission]\n",
+    "\n",
+    "# # Collect unique levels from the training set\n",
+    "# levels_dict = Dict()\n",
+    "# for col in categorical_cols\n",
+    "#     levels_dict[col] = unique(train[!, col])\n",
+    "# end\n",
+    "\n",
+    "# train = one_hot_encode(train, categorical_cols, levels_dict)\n",
+    "# valid = one_hot_encode(valid, categorical_cols, levels_dict)\n",
+    "#test = one_hot_encode(test, categorical_cols, levels_dict)\n",
+    "\n",
+    "\n",
     "# Drop unnecessary columns\n",
     "train = select(train, Not([:type, :transmission, :boite]))\n",
     "valid = select(valid, Not([:type, :transmission, :boite]))\n"
@@ -5195,8 +5210,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_train = Vector(train.consommation)\n",
-    "X_train = Matrix(train[:, Not([:consommation])])"
+    "numeric_cols = setdiff(names(train)[eltype.(eachcol(train)) .<: Real], [:consommation])\n",
+    "X_train = Matrix(select(train, numeric_cols))\n",
+    "\n",
+    "y_train = Vector(train.consommation)"
    ]
   },
   {
@@ -5205,7 +5222,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Centrer - réduire les données\n",
     "X_mean = mean(X_train; dims=1)\n",
     "X_stddev = std(X_train; dims=1, corrected=false)\n",
     "X_train_std = (X_train .- X_mean) ./ X_stddev\n"
@@ -5242,7 +5258,9 @@
    "outputs": [],
    "source": [
     "# Centrer - réduire les données de validation\n",
-    "X_valid = Matrix(valid[:, Not([:consommation])])\n",
+    "\n",
+    "numeric_cols = setdiff(names(valid)[eltype.(eachcol(train)) .<: Real], [:consommation])\n",
+    "X_valid = Matrix(select(valid, numeric_cols))\n",
     "\n",
     "X_valid_std = (X_valid .- X_mean) ./ X_stddev\n",
     "\n",
@@ -5275,7 +5293,7 @@
    "outputs": [],
    "source": [
     "# approche de pupuce \n",
-    "# données ne sont pas standartisées\n",
+    "# données ne sont pas standartisées ni one hot encoded\n",
     "y = train.consommation\n",
     "X = train[:, Not([:consommation])]\n",
     "\n",
@@ -5305,6 +5323,82 @@
     "\n",
     "rmse = sqrt(mean((valid_prediction - actual_values).^2))\n",
     "println(\"RMSE: \", rmse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using MultivariateStats\n",
+    "using GLM\n",
+    "\n",
+    "Random.seed!(1234) # For reproducibility\n",
+    "\n",
+    "# Split the data\n",
+    "ntrain = round(Int, 0.8 * nrow(full_train))\n",
+    "train_id = sample(1:nrow(full_train), ntrain; replace=false, ordered=true)\n",
+    "valid_id = setdiff(1:nrow(full_train), train_id)\n",
+    "\n",
+    "train = full_train[train_id, :]\n",
+    "valid = full_train[valid_id, :]\n",
+    "\n",
+    "# Data cleaning\n",
+    "for col in [:cylindree, :consommation]\n",
+    "    train[!, col] = replace.(train[!, col], \",\" => \".\")\n",
+    "    valid[!, col] = replace.(valid[!, col], \",\" => \".\")\n",
+    "    train[!, col] = safe_parse_float.(train[!, col])\n",
+    "    valid[!, col] = safe_parse_float.(valid[!, col])\n",
+    "end\n",
+    "\n",
+    "# Define categorical columns\n",
+    "categorical_cols = [:type, :transmission]\n",
+    "\n",
+    "# Collect unique levels from the training set\n",
+    "levels_dict = Dict()\n",
+    "for col in categorical_cols\n",
+    "    levels_dict[col] = unique(train[!, col])\n",
+    "end\n",
+    "\n",
+    "# Apply one-hot encoding\n",
+    "train = one_hot_encode(train, categorical_cols, levels_dict)\n",
+    "valid = one_hot_encode(valid, categorical_cols, levels_dict)\n",
+    "\n",
+    "# Drop unnecessary columns (already handled by one_hot_encode if columns are removed)\n",
+    "# Select only numeric columns for X\n",
+    "numeric_cols = setdiff(names(train)[eltype.(eachcol(train)) .<: Real], [:consommation])\n",
+    "X_train = Matrix(select(train, numeric_cols))\n",
+    "y_train = Vector(train.consommation)\n",
+    "\n",
+    "# Fit PCA on non-standardized data\n",
+    "pca_model = fit(PCA, X_train; maxoutdim=8)\n",
+    "\n",
+    "# Transform data\n",
+    "Yte = predict(pca_model, X_train)\n",
+    "Xr = reconstruct(pca_model, Yte)\n",
+    "\n",
+    "# Fit the regression model\n",
+    "model = lm(Xr, y_train)\n",
+    "\n",
+    "# Prepare validation data\n",
+    "X_valid = Matrix(select(valid, numeric_cols))\n",
+    "y_valid = Vector(valid.consommation)\n",
+    "\n",
+    "# Predict on validation data\n",
+    "valid_prediction = predict(model, X_valid)\n",
+    "\n",
+    "# Handle missing values in predictions\n",
+    "mean_prediction = mean(skipmissing(valid_prediction))\n",
+    "valid_prediction = coalesce.(valid_prediction, mean_prediction)\n",
+    "\n",
+    "# Handle missing values in actual values\n",
+    "mean_actual = mean(skipmissing(y_valid))\n",
+    "actual_values = coalesce.(y_valid, mean_actual)\n",
+    "\n",
+    "# Calculate RMSE\n",
+    "rmse = sqrt(mean((valid_prediction - actual_values).^2))\n",
+    "println(\"RMSE: \", rmse)\n"
    ]
   },
   {
