Implement outlier removal function and categorize vehicle types; apply log transformation to relevant features

--- a/notebooks/projet_equipe_R.ipynb
+++ b/notebooks/projet_equipe_R.ipynb
@@ -209,6 +209,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function remove_outliers_by_iqr(df, group_col, value_col)\n",
+    "    return combine(groupby(df, group_col)) do sdf\n",
+    "        q1 = quantile(sdf[!, value_col], 0.25)\n",
+    "        q3 = quantile(sdf[!, value_col], 0.75)\n",
+    "        iqr = q3 - q1\n",
+    "        lower_bound = q1 - 1.5 * iqr\n",
+    "        upper_bound = q3 + 1.5 * iqr\n",
+    "        filter(row -> lower_bound ≤ row[value_col] ≤ upper_bound, sdf)\n",
+    "    end\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function categorize_vehicle_type(vehicle_type)\n",
+    "    if vehicle_type in [\"break_petit\", \"voiture_minicompacte\", \"voiture_compacte\", \"VUS_petit\", \"voiture_moyenne\"]\n",
+    "        return \"petits_véhicules\"\n",
+    "    elseif vehicle_type in [\"voiture_sous_compacte\", \"break_moyen\", \"monospace\", \"camionnette_petit\"]\n",
+    "        return \"véhicules_moyens\"\n",
+    "    else\n",
+    "        return \"grands_véhicules\"\n",
+    "    end\n",
+    "end"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1665,8 +1700,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Prétraitement\n",
-    "\n",
     "# Datasets that contain 'consommation'\n",
     "datasets_with_consommation = [train, valid]\n",
     "\n",
@@ -1693,15 +1726,10 @@
     "    df.consommation = safe_parse_float.(df.consommation)\n",
     "end\n",
     "\n",
-    "# Drop missing values in all datasets\n",
-    "for df in [train, valid, test]\n",
-    "    dropmissing!(df)\n",
-    "end\n",
-    "\n",
-    "# # Encode 'boite' column in all datasets\n",
+    "# Encode 'boite' column in all datasets\n",
     "for df in [train, valid, test]\n",
     "    df.boite = ifelse.(df.boite .== \"automatique\", 1.0, 0.0)\n",
-    "end\n"
+    "end"
    ]
   },
   {
@@ -1710,10 +1738,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Create a new column with the grouped categories\n",
-    "# # if transmission is 4x4, change for integrale\n",
-    "# train.transmission = ifelse.(train.transmission .== \"4x4\", \"integrale\", train.transmission)\n",
-    "# train.transmission = ifelse.(train.transmission .== \"4x4\", \"integrale\", train.transmission)"
+    "train = remove_outliers_by_iqr(train, :cylindree, :consommation)\n",
+    "valid = remove_outliers_by_iqr(valid, :cylindree, :consommation)\n",
+    "\n",
+    "train.transmission = ifelse.(train.transmission .== \"4x4\", \"integrale\", train.transmission)\n",
+    "valid.transmission = ifelse.(valid.transmission .== \"4x4\", \"integrale\", valid.transmission)\n",
+    "test.transmission = ifelse.(test.transmission .== \"4x4\", \"integrale\", test.transmission)\n",
+    "\n",
+    "train.transmission = ifelse.(train.transmission .== \"propulsion\", \"integrale\", train.transmission)\n",
+    "valid.transmission = ifelse.(valid.transmission .== \"propulsion\", \"integrale\", valid.transmission)\n",
+    "test.transmission = ifelse.(test.transmission .== \"propulsion\", \"integrale\", test.transmission)\n",
+    "\n",
+    "train[:, :categorie_vehicule] = [categorize_vehicle_type(t) for t in train[:, :type]]\n",
+    "valid[:, :categorie_vehicule] = [categorize_vehicle_type(t) for t in valid[:, :type]]\n",
+    "test[:, :categorie_vehicule] = [categorize_vehicle_type(t) for t in test[:, :type]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define categorical columns\n",
+    "categorical_cols = [:categorie_vehicule, :transmission, :type]\n",
+    "\n",
+    "# Collect unique levels from the training set\n",
+    "levels_dict = Dict()\n",
+    "for col in categorical_cols\n",
+    "    levels_dict[col] = unique(train[!, col])\n",
+    "end\n",
+    "\n",
+    "# apply log transformation to the cylindree\n",
+    "train.cylindree = log.(train.cylindree)\n",
+    "valid.cylindree = log.(valid.cylindree)\n",
+    "test.cylindree = log.(test.cylindree)\n",
+    "\n",
+    "train.nombre_cylindres = log.(train.nombre_cylindres)\n",
+    "valid.nombre_cylindres = log.(valid.nombre_cylindres)\n",
+    "test.nombre_cylindres = log.(test.nombre_cylindres)"
    ]
   },
   {
@@ -1735,6 +1798,52 @@
     "valid = one_hot_encode(valid, categorical_cols, levels_dict)\n",
     "test = one_hot_encode(test, categorical_cols, levels_dict)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target = :consommation\n",
+    "\n",
+    "# Define the feature matrix and target vector\n",
+    "X_train = Matrix(train[:, Not([target])])\n",
+    "y_train = train[!, target]\n",
+    "X_valid = Matrix(valid[:, Not([target])])\n",
+    "y_valid = valid[!, target]\n",
+    "X_test = Matrix(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# #standardize the data\n",
+    "# function standardize(df)\n",
+    "#     for col in names(df)\n",
+    "#         if eltype(df[!, col]) <: Number\n",
+    "#             df[!, col] = (df[!, col] .- mean(df[!, col])) ./ std(df[!, col])\n",
+    "#         end\n",
+    "#     end\n",
+    "#     return df\n",
+    "# end\n",
+    "\n",
+    "# numeric_cols = [:age, :cylindree]\n",
+    "\n",
+    "# train[!, numeric_cols] = standardize(train[!, numeric_cols])\n",
+    "# valid[!, numeric_cols] = standardize(valid[!, numeric_cols])\n",
+    "# test[!, numeric_cols] = standardize(test[!, numeric_cols])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
