Add final dataset and enhance notebook with outlier handling and variable interaction analysis

--- a/notebooks/projet_equipe_R.ipynb
+++ b/notebooks/projet_equipe_R.ipynb
@@ -648,7 +648,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Comme mentionné, la distribution des cylindrées est très asymétrique, avec une majorité de véhicules ayant une cylindrée de moins de 3L.  Dans notre modèle final, nous n'avons toutefois pas pris compte de la correction de cette asymmétrie.  Nous allons donc plutôt étudier la relation entre la cylindrée et la consommation d'essence."
+    "Comme mentionné, la distribution des cylindrées est très asymétrique, avec une majorité de véhicules ayant une cylindrée de moins de 3L. De plus nous pouvons appercevoir des valeurs extrêmes qui devraient être traitées pour ne pas introduire de bruit dans notre modèle. Dans notre modèle final, nous n'avons toutefois pas pris compte de la correction de cette asymmétrie. Nous allons donc plutôt étudier la relation entre la cylindrée et la consommation d'essence."
    ]
   },
   {
@@ -917,6 +917,13 @@
    "metadata": {},
    "source": [
     "On voit donc que plus le nombre de cylindres est grand, plus la consommation d'essence moyenne a tendance à augmenter aussi. Compte tenu de cette observation et du fort coefficient de corrélation entre la consommation et le nombre de cylindres, il semble que ce dernier constitue une variable explicative de fort intérêt pour notre modèle prédictif."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comme la cylindrée du véhicule présentait des caractéristiques similaires à celles du nombre de cylindres, nous avons étudié la relations entre ces deux variables explicatives. Curieux de savoir si l'intéraction des deux variables apportait une information supplémentaire, nous souhaitions examiner si la combinaison des deux était pertinente. Nous avons donc créé une nouvelle variable qui représentait la capacité moteur du véhicule, soit le produit de la cylindrée et du nombre de cylindres. Toutefois, nous avons constaté que cette nouvelle variable n'apportait pas d'information supplémentaire par rapport à la cylindrée et au nombre de cylindres, et nous avons donc décidé de ne pas l'inclure dans notre modèle final."
    ]
   },
   {
@@ -1537,27 +1544,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## convert annee column into age\n",
-    "train.age = 2024 .- train.annee\n",
-    "valid.age = 2024 .- valid.annee\n",
-    "test.age = 2024 .- test.annee\n",
-    "\n",
-    "train = select!(train, Not(:annee))\n",
-    "valid = select!(valid, Not(:annee))\n",
-    "test = select!(test, Not(:annee))\n",
-    "\n",
-    "## drop missing values\n",
-    "train = dropmissing(train)\n",
-    "valid = dropmissing(valid)\n",
-    "test = dropmissing(test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#Prétraitement\n",
     "\n",
     "# Datasets that contain 'consommation'\n",
@@ -1595,7 +1581,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "C'est plutôt ici que le pre-processing est appliqué aux jeux de données pertinents. Effectivement, cette cellule combine les différentes conclusions tirées dans la section d'exploration de données pour exploiter les différentes variables explicatives de manière optimale. Par exemple  "
+    "C'est plutôt ici que le pre-processing est appliqué aux jeux de données pertinents. Effectivement, cette cellule combine les différentes conclusions tirées dans la section d'exploration de données pour exploiter les différentes variables explicatives de manière optimale. Par exemple, la premi "
    ]
   },
   {
@@ -1604,12 +1590,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "println(\"Train set: \", size(train))\n",
+    "\n",
     "train = remove_outliers_by_iqr(train, :cylindree, :consommation)\n",
     "valid = remove_outliers_by_iqr(valid, :cylindree, :consommation)\n",
+    "\n",
+    "println(\"Train set after removing outliers: \", size(train))\n",
     "\n",
     "train.cylindree = log.(train.cylindree)\n",
     "valid.cylindree = log.(valid.cylindree)\n",
     "test.cylindree = log.(test.cylindree)\n",
+    "\n",
+    "\n",
     "\n",
     "train.nombre_cylindres = log.(train.nombre_cylindres)\n",
     "valid.nombre_cylindres = log.(valid.nombre_cylindres)\n",
