Refine markdown explanation and improve code comments in project notebook

--- a/notebooks/projet_equipe_R.ipynb
+++ b/notebooks/projet_equipe_R.ipynb
@@ -1475,7 +1475,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Maintenant que nous en avons appris davantage sur les différentes relations entre les variables, il est temps de quantifier la force qu'elles auront sur la variable d'intérêt par une régression linéaire. Pour commencer, nous partitionnons nos données en un ensemble d'entrainement et un ensemble de validation. Pour ce faire, nous utilisons la stratégie du ratio 80/20 et nous intégrerons une validation croisée èa k blocs pour évaluer la performance de notre modèle."
+    "Maintenant que nous en avons appris davantage sur les différentes relations entre les variables explicatives et la variable d'intérêt, il est temps de quantifier la force qu'elles auront par une régression linéaire. Pour commencer, nous partitionnons nos données en un ensemble d'entrainement et un ensemble de validation. Pour ce faire, nous utilisons la stratégie du ratio 80/20 et nous intégrerons une validation croisée à k blocs pour évaluer la performance de notre modèle. Pour finalement sélectionner le meilleur modèle selon différents critères."
    ]
   },
   {
@@ -1578,9 +1578,7 @@
     "\n",
     "train[:, :categorie_vehicule] = [categorize_vehicle_type(t) for t in train[:, :type]]\n",
     "valid[:, :categorie_vehicule] = [categorize_vehicle_type(t) for t in valid[:, :type]]\n",
-    "test[:, :categorie_vehicule] = [categorize_vehicle_type(t) for t in test[:, :type]]\n",
-    "\n",
-    "\n"
+    "test[:, :categorie_vehicule] = [categorize_vehicle_type(t) for t in test[:, :type]]"
    ]
   },
   {
